project: remove takari-lifecycle, parent pom